--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <span>Begin Your Journey</span>
                 </button>
             </div>
+            <div class="creator-credit">
+                <p>Made by Prateek Kumar</p>
+            </div>
         </div>
     </div>
 
@@ -322,9 +325,13 @@
                     <span>Download Certificate</span>
                 </button>
                 
-                <button class="btn-secondary" onclick="showPage('final')" style="margin-top: 1rem;">
-                    <span>Back</span>
+                <button class="btn-secondary" onclick="showPage('landing')" style="margin-top: 1rem;">
+                    <span>Home</span>
                 </button>
+            </div>
+            
+            <div class="creator-credit">
+                <p>Made by Prateek Kumar</p>
             </div>
         </div>
     </div>
